# libraryproject

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md
cmake/: FetchMiniz.cmake  install-config.cmake  install-rules.cmake  toolchain.cmake
include/libraryproject/: libraryproject.hpp
test/: CMakeLists.txt
test/source/: libraryproject_test.cpp
